getting rid of solid color option on create template page, adding as issue for stretch goal later

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -186,17 +186,13 @@ body {
     #form {
       width: 50%;
       float: left;
-      #background {
-        margin-left: 3em;
-      }
       #image {
         #file {
           margin: 1em 0;
         }
       }
-      #or {
-        color: #ff6b6b;
-        margin-top: 0.5em;
+      .btn {
+        margin-top: 2em;
       }
     }
     #preview {
